--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ authors = [
 dependencies = [
     "duckdb>=0.8.0",
     "pyarrow>=12.0.0",
+    "tqdm>=4.65.0",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
